--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="poster">
+		<img src="https://images.unsplash.com/photo-1485846234645-a62644f84728?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2059&q=80" class="moviePic">
+		<p class="movieDetail">This is the movie descriptions and its all about the movie scenes and all actions</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
